CR-004: Add pagination
