# addressbook-app/src/main/java/com/veeteq/addressbook/rest/controller/ContactController.java
@@ -4,7 +4,6 @@ import com.veeteq.addressbook.mapper.ContactMapper;
 import com.veeteq.addressbook.rest.api.ContactsApi;
 import com.veeteq.addressbook.rest.dto.ContactDto;
 import com.veeteq.addressbook.rest.dto.ContactRequestDto;
-import com.veeteq.addressbook.rest.dto.ContactsPageResponseDto;
 import com.veeteq.addressbook.rest.dto.ContactsResponseDto;
 import com.veeteq.addressbook.service.ContactService;
 import org.slf4j.Logger;
@@ -13,7 +12,10 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 
@@ -36,13 +38,6 @@ public class ContactController implements ContactsApi {
         return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
 
-    @GetMapping(path = "/contacts")
-    public ResponseEntity<List<ContactDto>> getContacts() {
-
-        var response = contactService.getContacts();
-        return ResponseEntity.ok(response);
-    }
-
     @Override
     public ResponseEntity<ContactDto> getContactById(@PathVariable(name = "id", required = true) Long id) {
 
@@ -51,12 +46,19 @@ public class ContactController implements ContactsApi {
     }
 
     @Override
-    public ResponseEntity<ContactsPageResponseDto> getContacts(String searchText, Integer pageNumber, Integer pageSize) {
-        return null;
+    public ResponseEntity<ContactsResponseDto> getContacts(Integer pageNumber, Integer pageSize, String orderBy, String orderDirection) {
+        LOGGER.info("Request received to list all contacts");
+
+        var direction = Sort.Direction.fromString(orderDirection);
+        var sort = Sort.by(direction, orderBy);
+        var pageRequest = PageRequest.of(pageNumber, pageSize, sort);
+        var response = contactService.getContacts(pageRequest);
+        return ResponseEntity.ok()
+                .body(response);
     }
 
     @Override
-    public ResponseEntity<ContactsPageResponseDto> searchContacts(String searchText, Integer pageNumber, Integer pageSize) {
+    public ResponseEntity<List<ContactDto>> searchContacts(String searchText) {
         return null;
     }
 
